# emion

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  anomaly_detector.py  install.sh  mkdocs.yml  out.txt  pyproject.toml  setup.py
docs/: api.md  coding_guide.md  examples.md  index.md  usage_demo.ipynb
emion/: __init__.py  cli.py
emion/core/: __init__.py  engine.py  mars_import.py  network.py  node.py  scenarios.py
emion/dashboard/: __init__.py  server.py
emion/dashboard/static/: app.js  index.html  style.css
emion/plugins/: __init__.py  base.py
emion/pyion/: __init__.py  _bp.c  _cfdp.c  _ltp.c  _mem.c  _mgmt.c  _utils.c  base_bp.c  base_bp.h  base_cfdp.c  base_cfdp.h  base_ltp.c  base_ltp.h  base_mem.c  base_mem.h  bp.py  cfdp.py  constants.py  ltp.py  mem.py  mgmt.py  proxies.py  saga.h  utils.py
examples/: debug_crash.py  gui_sim.py  health_check.py  linear_transfer.py  simple_test.py  test_imports_api.py  verify_attach.py  verify_bindings.py
examples/anomaly_detector/: README.md
examples/core_services/: ion_mars_service.py  run_core_gui_novnc.sh
examples/ion_mars/: README.md  rcgen.sh
ion_mars/: ion_start.sh  mars.xml
ion_mars/config/: n1.ionconfig  n6.ionconfig
scripts/: run_gui.sh  start_ion.sh  stop_ion.sh
src/emion/: __init__.py  _core.c  node.py
tests/: test_basic.py  test_emion.py
