[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emion"
version = "0.3.3"
authors = [
  { name="EmION Team", email="dev@info-gallary.com" },
]
description = "Professional ION-DTN Mission Control & BPv7 Simulation Framework"
readme = "README.md"
requires-python = ">=3.8"
license = { text="MIT" }
keywords = ["dtn", "ion", "bpv7", "simulation", "space", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/info-gallary/emion"
Repository = "https://github.com/info-gallary/emion.git"

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
]

[project.scripts]
emion = "emion.cli:main"

[tool.setuptools]
packages = ["emion", "emion.core", "emion.dashboard", "emion.plugins"]

[tool.setuptools.package-data]
emion = ["dashboard/static/*"]
